have fixed up links for sessions & letter spacing on headings

--- a/app/assets/stylesheets/custom.css.scss
+++ b/app/assets/stylesheets/custom.css.scss
@@ -2,6 +2,8 @@
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
 
+// turned off letter-spacing in headlines, looks awful in my view
+
 /* mixins, variables, etc. */
 
 // @import "bootstrap";
@@ -41,14 +43,14 @@ h1, h2, h3, h4, h5, h6 {
 
 h1 {
   font-size: 3em;
-  letter-spacing: -2px;
+  // letter-spacing: -2px;
   margin-bottom: 30px;
   text-align: center;
 }
 
 h2 {
   font-size: 1.2em;
-  letter-spacing: -1px;
+  // letter-spacing: -1px;
   margin-bottom: 30px;
   text-align: center;
   font-weight: normal;
@@ -69,7 +71,7 @@ p {
   font-size: 1.7em;
   color: black;
   text-transform: uppercase;
-  letter-spacing: -1px;
+  // letter-spacing: -1px;
   padding-top: 9px;
   font-weight: bold;
   line-height: 1;
@@ -148,7 +150,7 @@ aside {
     h1 {
       font-size: 1.4em;
       text-align: left;
-      letter-spacing: -1px;
+      // letter-spacing: -1px;
       margin-bottom: 3px;
       margin-top: 0px;
     }
